add float image in contact section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     This project was used for practicing git push and commits. Languages used are <strong>HTML</strong> and <strong>CSS</strong> I was having a hard time tracking changes with git but this project helped me learn it.</p>
             </div>
                                 
-        <div class="contact">               
+        <div class="contact">
+            <img id="img2" src="/images/contact.jpg" alt="a contact">              
             <h2>Contact</h2>
             <p>I'm always looking to work on interesting and innovative projects that positvely impact the lives of the users. If you'd like to chat about working together, you can reach me on:</p>
         
