change the border size

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
     <div class="about">   
         <h2>About me</h2>
         <h3>Education</h3>
-        <p>I am recent graduate from the <a href="https://tukenya.ac.ke/">Technical University of Kenya</a>  with Bachelors in Built Environment in Construction Management.I am also taking a Google course in <em>UX Design</em> at <a href="https://www.coursera.org/professional-certificates/sas-programming?utm_source=gg&utm_medium=sem&utm_campaign=37-SAS-Programmer-ROW&utm_content=B2C&campaignid=12580139693&adgroupid=123268173721&device=c&keyword=coursera%20programming&matchtype=b&network=g&devicemodel=&adpostion=&creativeid=507831382046&hide_mobile_promo&gclid=CjwKCAiA9tyQBhAIEiwA6tdCrAhBHWW2_Y4xL0o0qhAASLNe0pZtYs6vwFtcqf_CfrxrnycDBYMMrRoCJIkQAvD_BwE">Coursera</a> while studying software development at <a href="https://moringaschool.com/">Moringa School. </a> I choose Moringa School because it is one of the best bootcmaps available with good testimonies from alumni.</p>
+        <p>I am recent graduate from the <a href="https://tukenya.ac.ke/">Technical University of Kenya</a>  with Bachelors in Built Environment in Construction Management.I am also taking a Google course in <em>UX Design</em> at <a href="https://www.coursera.org/professional-certificates/sas-programming?utm_source=gg&utm_medium=sem&utm_campaign=37-SAS-Programmer-ROW&utm_content=B2C&campaignid=12580139693&adgroupid=123268173721&device=c&keyword=coursera%20programming&matchtype=b&network=g&devicemodel=&adpostion=&creativeid=507831382046&hide_mobile_promo&gclid=CjwKCAiA9tyQBhAIEiwA6tdCrAhBHWW2_Y4xL0o0qhAASLNe0pZtYs6vwFtcqf_CfrxrnycDBYMMrRoCJIkQAvD_BwE">Coursera</a> while studying software development at <a href="https://moringaschool.com/">Moringa School. </a> I choose Moringa School because it is one of the best bootcmaps available with good testimonies from alumni and also because I want to change career paths from Construction to tech. I beleive that there is no limit to learning new things and that is why I am on this journey.</p>
       
         <h3>Skills</h3>
             <p>I have the following skills</p>
             <ul>
                 <li>Problem-solving skills</li>
                 <li>Leading with emotional intelligence</li>
+                <li>Communication skills</li>
+                <li>Teamwork and collaboration</li>
                 <li>Leadership skills</li>
                 <li>Critical thinking</li>
             </ul>
@@ -39,6 +41,7 @@
         <ol>
             <li>Cycling</li>
             <li>Playing chess</li>
+            <li>Photography</li>
             <li>Hiking</li>
         </ol>
         
