add more information about my projects

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               
         <div class="border">
             <h2>My Projects</h2>
-                <p>Throughout my stay at Moringa School, I have worked on the following projects:</p>
+                <p>I have worked on the following projects among many others:</p>
                 <h3>My first webpage</h3>                
                                                          
                     <p><a href="https://github.com/ynyanchoka/my-first-webpage">My first website</a>This was my first website I created. It was exiciting and  challenging at the same time.I learned  how to use <span class="important">HTML and CSS</span>. I also learned how to add an image and how to make sure that  the visually impared can be able to read an image with screen readers.
